# Algorithm_Engineering_v2

./: .gitignore  README.md
Resources/01_Code/: hello_simple
Resources/Image_Enhancers/: scan_enhancer.py
Resources/Image_Enhancers/Cython_Image_Enhancers/: filter.pyx  scan_enhancer_pyximport.py
answers/: .~lock.Exam_Assignment_1.odt#  Exam_Assignment_1.odt  Exam_Assignment_2.txt  hello
answers/Assignment_1/: generated
answers/Assignment_10/: Exam_Assignment_10.txt
answers/Assignment_11/: Exam_Assignment_11.txt
answers/Assignment_12/: Exam_Assignment_12.txt
answers/Assignment_13/: Exam_Assignment_13.txt
answers/Assignment_2/: Exam_Assignment_2.txt
answers/Assignment_3/: Exam_Assignment_3
answers/Assignment_4/: Exam_Assignment_4.txt
answers/Assignment_5/: Exam_Assignment_5.txt
answers/Assignment_6/: Exam_Assignment_6.txt
answers/Assignment_7/: Exam_Assignment_7.txt
answers/Assignment_8/: Exam_Assignment_8.txt
answers/Assignment_9/: Exam_Assignment_9.txt
project/: .gitignore  Analysis_Book.ipynb  CMakeCache.txt  CMakeLists.txt  ImageEnhancer.cpp  ImageFilter.cpp  ImageFilter.hpp  Makefile  README.md  cmake_install.cmake  main.cpp
project/.ipynb_checkpoints/: Analysis_Book-checkpoint.ipynb
project/Header_Files/: ImageFilter.hpp  PPMConverter.hpp
project/Source_Files/: ImageFilter.cpp  PPMConverter.cpp  main.cpp
project/include/: Benchmark.hpp  CSVWriter.hpp  ImageFilter.hpp  OMPBenchmark.hpp  PPMConverter.hpp
project/src/: Benchmark.cpp  CSVWriter.cpp  ImageFilter.cpp  ImageFilter.cxx  JPGConverter.cpp  PPMConverter.cpp  main.cpp
(+1 files in other folders)
